[project]
name = "ires"
version = "0.1.0"
description = "Infra Resilience Explorer: MWU-learned tree mixtures for bottleneck analysis"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.2",
  "numpy>=1.26",
  "typer>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ires = "ires.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
